--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
             "email": "bushkovsky@gmail.com"
         }
     ],
+    "license": "MIT",
     "minimum-stability": "stable",
     "require-dev": {
         "phpunit/phpunit": "~4"
